--- a/tox.ini
+++ b/tox.ini
@@ -48,5 +48,6 @@ commands =
 deps =
     flake8
     flake8-future-import
+    flake8-import-order
     pep8-naming
 commands = flake8 beets beetsplug beet test setup.py docs
